test/CheckError/Const/CallNonConstMethodOnConstPredicateObject.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

template <bool IsConst>
class TestClass(int value) {
	static create = default;
	
	void doSomething() const(IsConst) { }
}

export void f() {
	const auto constPredicatedObject = TestClass<true>(10);
	constPredicatedObject.doSomething();
	
	const auto object = TestClass<false>(10);
	// CHECK: .loci:17:2: error: cannot refer to mutator method 'doSomething' from const object of type 'const(TestClass<BoolConstant(false)>)'
	object.doSomething();
}

// CHECK: 1 error generated.
